--- a/pheelstyle/rawstatic/css/style.css
+++ b/pheelstyle/rawstatic/css/style.css
@@ -146,3 +146,22 @@ input:checked + .star:hover, input:checked ~ .star:hover, input:checked ~ .star:
         width: 100%;
     }
 }
+
+ul.product-image-thumbnail {
+    margin: 0 auto;
+    padding: 0;
+    float: right;
+}
+
+ul.product-image-thumbnail li {
+    list-style: none;
+    margin: 10px;
+}
+
+ul.product-image-thumbnail li img {
+    width: 80px;
+    height: 80px;
+    border: 1px solid coral;
+    border-radius: 10px;
+
+}
