--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,19 +4,19 @@
 <footer class="section-footer border-top">
 	<div class="container">
 		<section class="footer-bottom border-top row">
+            			<div class="col-md-2 text-md-right text-muted">
+                <a href="https://www.instagram.com/pheel_style">
+                    <i style="font-size: 25px;color:coral;" class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+			</div>
 			<div class="col-md-2">
-				<p class="text-muted"> &copy 2019 Company name </p>
+				<p class="text-muted"> وب پاتوق فیل استایل</p>
 			</div>
 			<div class="col-md-8 text-md-center">
-				<span  class="px-2">info@pixsellz.io</span>
-				<span  class="px-2">+879-332-9375</span>
-				<span  class="px-2">Street name 123, Avanue abc</span>
+				<span  class="px-2">+134-666-4190</span>
+				<span  class="px-2">گیلان، تالش، خیابان معین، پاساژ کاسپین، طبقه دوم</span>
 			</div>
-			<div class="col-md-2 text-md-right text-muted">
-				<i class="fab fa-lg fa-cc-visa"></i>
-				<i class="fab fa-lg fa-cc-paypal"></i>
-				<i class="fab fa-lg fa-cc-mastercard"></i>
-			</div>
+
 		</section>
 	</div><!-- //container -->
 </footer>
