--- a/static/admin/css/rtl.css
+++ b/static/admin/css/rtl.css
@@ -1,5 +1,8 @@
 /* GLOBAL */
-
+* {
+    font-family: "Vazir-Bold", "BYekan", sans-serif !important;
+    font-size: 20px !important;
+}
 th {
     text-align: right;
 }
