receipt image not uploading bug fix; finalizing the website

--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -24,7 +24,7 @@
                                 </div>
                         </header>
                         <div class="card-body" style="border-radius: 15px; border: 1px solid lightgray; margin-top: -2%; z-index: 0">
-                            <form method="post" action="{% url 'user-profile' %}" enctype="multipart/form-data">
+                            <form method="post" action="{% url 'profile' %}" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="card">
                                     <div class="card-body">
