--- a/templates/dashboard/sidebar.html
+++ b/templates/dashboard/sidebar.html
@@ -7,7 +7,7 @@
     <!--   SIDEBAR   -->
     <ul class="list-group text-right px-0">
         <a class="list-group-item {% if request.path == '/dashboard/' %}active{% endif %}" href="{% url 'user-dashboard' %}"> کیستی؟ </a>
-        <a class="list-group-item {% if request.path == '/dashboard/profile/' %}active{% endif %}" href="{% url 'user-profile' %}"> پروفایل </a>
+        <a class="list-group-item {% if request.path == '/dashboard/profile/' %}active{% endif %}" href="{% url 'profile' %}"> پروفایل </a>
         <a class="list-group-item {% if request.path == '/dashboard/orders/' %}active{% endif %}" href="{% url 'user-orders' %}"> زد و بندها </a>
         <a class="list-group-item {% if request.path == '/dashboard/chpwd/' %}active{% endif %}" href="{% url 'user-chpwd' %}"> تغییر رمزشب </a>
         <br />
